<resources>
	
	<!-- Project level resources -->
	<string name="app_name">BoozAppRefined</string>
	
	<!-- Resources for MyEventsActivity -->
	<string name="my_events_activity_my_events_text_view_hint">My events</string>
	<string name="my_events_activity_my_events_text_view_text">My events</string>
	
	<!-- Resources for ProfileSettingsActivity -->
	<string name="profile_settings_activity_phone_number_text_view_text">Phone Number</string>
	<string name="profile_settings_activity_edit_profile_picture_button_text">edit\nprofile\npicture</string>
	<string name="profile_settings_activity_logout_button_hint">Logout</string>
	<string name="profile_settings_activity_save_button_text">Save</string>
	<string name="profile_settings_activity_logout_button_text">Logout</string>
	<string name="profile_settings_activity_password_text_view_text">Password</string>
	<string name="profile_settings_activity_profile_settings_text_view_text">Profile Settings</string>
	<string name="profile_settings_activity_profile_settings_text_view_hint">Profile Settings</string>
	<string name="profile_settings_activity_username_text_view_hint">Username</string>
	<string name="profile_settings_activity_save_button_hint">Save</string>
	<string name="profile_settings_activity_username_text_view_text">Username</string>
	<string name="profile_settings_activity_edit_profile_picture_button_hint">edit\nprofile\npicture</string>
	<string name="profile_settings_activity_password_text_view_hint">Password</string>
	<string name="profile_settings_activity_email_text_view_text">Email</string>
	<string name="profile_settings_activity_name_text_view_text">Name</string>
	<string name="profile_settings_activity_phone_number_text_view_hint">Phone Number</string>
	<string name="profile_settings_activity_name_text_view_hint">Name</string>
	<string name="profile_settings_activity_email_text_view_hint">Email</string>
	
	<!-- Resources for ClubProfileActivity -->
	<string name="club_profile_activity_info_two_text_view_hint">info </string>
	<string name="club_profile_activity_the_old_firestation_text_view_hint">The Old\nFireStation</string>
	<string name="club_profile_activity_email_text_view_hint">Email: </string>
	<string name="club_profile_activity_amenities_text_view_text">Amenities</string>
	<string name="club_profile_activity_the_old_firestation_text_view_text">The Old\nFireStation</string>
	<string name="club_profile_activity_address_text_view_text">Address: </string>
	<string name="club_profile_activity_phone_text_view_hint">Phone: </string>
	<string name="club_profile_activity_amenities_text_view_hint">Amenities</string>
	<string name="club_profile_activity_profile_text_view_text">Profile</string>
	<string name="club_profile_activity_info_two_text_view_text">info </string>
	<string name="club_profile_activity_info_three_text_view_hint">info </string>
	<string name="club_profile_activity_info_three_text_view_text">info </string>
	<string name="club_profile_activity_info_text_view_text">info </string>
	<string name="club_profile_activity_recent_events_text_view_hint">Recent events</string>
	<string name="club_profile_activity_profile_text_view_hint">Profile</string>
	<string name="club_profile_activity_phone_text_view_text">Phone: </string>
	<string name="club_profile_activity_recent_events_text_view_text">Recent events</string>
	<string name="club_profile_activity_email_text_view_text">Email: </string>
	<string name="club_profile_activity_address_text_view_hint">Address: </string>
	<string name="club_profile_activity_info_text_view_hint">info </string>

	<!-- Resources for ProfileActivity -->
	<string name="profile_activity_recent_events_text_view_text">Recent events</string>
	<string name="profile_activity_profile_text_view_text">Profile</string>
	<string name="profile_activity_your_name_text_view_hint">Your name</string>
	<string name="profile_activity_recent_events_text_view_hint">Recent events</string>
	<string name="profile_activity_your_name_text_view_text">Your name</string>
	<string name="profile_activity_profile_text_view_hint">Profile</string>
	
	<!-- Resources for LandingPageActivity -->
	<string name="landing_page_activity_sign_up_btn_button_hint">Sign Up</string>
	<string name="landing_page_activity_email_edit_text_hint">Email</string>
	<string name="landing_page_activity_booz_text_view_hint">Booz</string>
	<string name="landing_page_activity_confirm_you_are18_otext_view_hint">Confirm you are 18 or over..</string>
	<string name="landing_page_activity_sign_in_button_text">Sign in</string>
	<string name="landing_page_activity_already_have_an_acco_text_view_hint">Already have an account? </string>
	<string name="landing_page_activity_sign_in_button_hint">Sign in</string>
	<string name="landing_page_activity_confirm_you_are18_otext_view_text">Confirm you are 18 or over..</string>
	<string name="landing_page_activity_already_have_an_acco_text_view_text">Already have an account? </string>
	<string name="landing_page_activity_sign_up_btn_button_text">Sign Up</string>
	<string name="landing_page_activity_booz_text_view_text">Booz</string>
	<string name="landing_page_activity_pass_edit_text_hint">Password</string>


	<!-- Resources for FriendsActivity -->
	<string name="friends_activity_friends_text_view_hint">Friends</string>
	<string name="friends_activity_friends_text_view_text">Friends</string>
	
	<!-- Resources for SignUpActivity -->
	<string name="sign_up_activity_your_name_edit_text_hint">Name</string>
	<string name="sign_up_activity_sign_up_btn_button_hint">Proceed</string>
	<string name="sign_up_activity_phone_number_edit_text_hint">Phone Number</string>
	<string name="sign_up_activity_sign_up_btn_button_text">Proceed</string>
	<string name="sign_up_activity_booz_text_view_text">Booz</string>
	<string name="sign_up_activity_booz_text_view_hint">Booz</string>
	
	<!-- Resources for HomeActivity -->
	<string name="home_activity_search_edit_text_hint">Search Event/Cub</string>
	
	<!-- Resources for LoginActivity -->
	<string name="login_activity_login_button_text">Login</string>
	<string name="login_activity_booz_text_view_text">Booz</string>
	<string name="login_activity_pass_edit_text_hint">Password</string>
	<string name="login_activity_login_button_hint">Login</string>
	<string name="login_activity_email_edit_text_hint">Email</string>
	<string name="login_activity_booz_text_view_hint">Booz</string>
	
	<!-- Resources for LeaveAReviewActivity -->
	<string name="leave_areview_activity_leave_areview_text_view_hint">Leave a review</string>
	<string name="leave_areview_activity_leave_areview_text_view_text">Leave a review</string>
	<string name="leave_areview_activity_amenities_text_view_hint">Amenities</string>
	<string name="leave_areview_activity_amenities_text_view_text">Amenities</string>

	
	<!-- Resources for GetHomeSafeActivity -->
	<string name="get_home_safe_activity_home_safe_text_view_text">Home safe</string>
	<string name="get_home_safe_activity_home_safe_text_view_hint">Home safe</string>
	<string name="get_home_safe_activity_home_safe_area_button_text">I’m home</string>
	<string name="get_home_safe_activity_home_safe_area_button_hint">I’m home</string>
	
	<!-- Resources for NotificationsActivity -->
	<string name="notifications_activity_notifications_text_view_text">Notifications</string>
	<string name="notifications_activity_notifications_text_view_hint">Notifications</string>
	
	<!-- Resources for FriendsProfileActivity -->
	<string name="friends_profile_activity_profile_text_view_text">Profile</string>
	<string name="friends_profile_activity_recent_events_text_view_text">Recent events</string>
	<string name="friends_profile_activity_recent_events_text_view_hint">Recent events</string>
	<string name="friends_profile_activity_profile_text_view_hint">Profile</string>
	<string name="friends_profile_activity_their_name_text_view_hint">Their name</string>
	<string name="friends_profile_activity_their_name_text_view_text">Their name</string>
</resources>