<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/sign_up_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/sign_up_activity_sign_up_constraint_layout_background_color">

	<Button
		android:id="@+id/sign_up_btn_button"
		android:layout_width="@dimen/sign_up_activity_sign_up_btn_button_width"
		android:layout_height="@dimen/sign_up_activity_sign_up_btn_button_height"
		android:layout_marginBottom="@dimen/sign_up_activity_sign_up_btn_button_margin_bottom"
		android:background="@drawable/sign_up_activity_sign_up_btn_button_ripple"
		android:text="@string/sign_up_activity_sign_up_btn_button_text"
		android:textColor="@color/sign_up_activity_sign_up_btn_button_text_color"
		android:textSize="@dimen/sign_up_activity_sign_up_btn_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:gravity="center" />

	<EditText
		android:id="@+id/phone_number_edit_text"
		android:layout_width="@dimen/sign_up_activity_phone_number_edit_text_width"
		android:layout_height="@dimen/sign_up_activity_phone_number_edit_text_height"
		android:layout_marginTop="@dimen/sign_up_activity_phone_number_edit_text_margin_top"
		android:background="@drawable/sign_up_activity_phone_number_edit_text_background"
		android:gravity="center|center_vertical"
		android:hint="@string/sign_up_activity_phone_number_edit_text_hint"
		android:inputType="text"
		android:maxLines="1"
		android:textColor="@color/sign_up_activity_phone_number_edit_text_text_color"
		android:textColorHint="@color/color_hint_text"
		android:textSize="@dimen/sign_up_activity_phone_number_edit_text_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/your_name_edit_text"
		tools:layout_editor_absoluteX="72dp"
		tools:layout_editor_absoluteY="423dp"/>

	<EditText
		android:id="@+id/your_name_edit_text"
		android:layout_width="@dimen/sign_up_activity_your_name_edit_text_width"
		android:layout_height="@dimen/sign_up_activity_your_name_edit_text_height"
		android:layout_marginTop="@dimen/sign_up_activity_your_name_edit_text_margin_top"
		android:background="@drawable/sign_up_activity_your_name_edit_text_background"
		android:gravity="center|center_vertical"
		android:hint="@string/sign_up_activity_your_name_edit_text_hint"
		android:inputType="text"
		android:maxLines="1"
		android:textColor="@color/sign_up_activity_your_name_edit_text_text_color"
		android:textColorHint="@color/color_hint_text"
		android:textSize="@dimen/sign_up_activity_your_name_edit_text_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/booz_text_view"
		tools:layout_editor_absoluteX="72dp"
		tools:layout_editor_absoluteY="368dp"/>

	<TextView
		android:id="@+id/booz_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_up_activity_booz_text_view_margin_top"
		android:fontFamily="@font/font_hotham_freedemo"
		android:gravity="start"
		android:text="@string/sign_up_activity_booz_text_view_text"
		android:textColor="@color/sign_up_activity_booz_text_view_text_color"
		android:textSize="@dimen/sign_up_activity_booz_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="58dp"
		tools:layout_editor_absoluteY="105dp"/>
</android.support.constraint.ConstraintLayout>